added AI assistant

--- a/inventory_management/app/.env
+++ b/inventory_management/app/.env
@@ -5,3 +5,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=inventory-management-3bb59.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=769408448635
 NEXT_PUBLIC_FIREBASE_APP_ID=1:769408448635:web:7a0e0f860bf67d0d408ade
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-KB2HZB8MZC
+NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyD8tLeg83D7ZfsXsLr25ZwX-cTzIR3Te5A
