--- a/inventory_management/package.json
+++ b/inventory_management/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@google/generative-ai": "^0.16.0",
     "@mui/material": "^5.16.6",
     "firebase": "^10.12.5",
+    "lodash": "^4.17.21",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
